2008-10-21  Wakaba  <wakaba@suika.fam.cx>

	* features.html.src: Renamed from features.ja.html.

	* Makefile (all): |features.ja.html| and |features.en.html| added.

	* .htaccess: Don't set Content-Type for |.src| extension.

2008-10-21  Wakaba  <wakaba@suika.fam.cx>

	* .htaccess, Makefile: New files.

	* cover.html.src: New file; a copy of former |cover.ja.html|, with
	some modification and some English translation added.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* cover.ja.html, features.ja.html, news-0-4.en.html: Updated
	for the release of manakai 0.4.0.

2007-09-21  Wakaba  <wakaba@suika.fam.cx>

	* manakai-logo.png: (After long sleep time) added.

	* news-0-4.en.html: New document.

	* manakai-style.css: New style sheet.

2007-08-25  Wakaba  <wakaba@suika.fam.cx>

	* cover.ja.html: Link to |Message::URI::URIReference|
	pod is added.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* feature.ja.html: This document now describes
	manakai 0.4.0.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* cover.ja.html: Added link to module documentations.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* cover.ja.html: Reference to the charlib subproject.

2007-07-19  Wakaba  <wakaba@suika.fam.cx>

	* cover.ja.html: Link to SuikaWiki pages,
	Whatpm subproject page, and CharClass module page are added.

2006-06-18  Wakaba  <wakaba@suika.fam.cx>

	* conver.ja.html: Link to the manakai 0.3.2 tar ball is added.

2006-06-18  Wakaba  <wakaba@suika.fam.cx>

	* news-0-3.ja.html: New document.

2006-06-17  Wakaba  <wakaba@suika.fam.cx>

	* features.ja.html: New document.

2006-04-22  Wakaba  <wakaba@suika.fam.cx>

	* cover.ja.html: New document.

	* ChangeLog: New file.

