@@ -121,6 +121,23 @@ parser (<em>beta</em>) Web interface (manakai version)</a></li>
 </ul>
 </div>
 
+<div class="section" id="applications">
+<h2 data-lang-container=""><span lang="en">Applications using manakai-core</span></h2>
+
+<ul>
+
+<li><a href="http://suika.fam.cx/www/harusame/readme" lang="ja">Harusame</a>, multilingual Web page management tool.
+
+</li><li>suikawari
+
+</li><li id="app-webhacc"><a href="http://suika.fam.cx/gate/2007/html/cc/"><abbr>WebHACC</abbr>
+(Web hypertext application conformance checker)</a> (See also <a href="http://suika.fam.cx/gate/2007/html/cc-about"><cite>about
+WebHACC</cite></a>).
+
+</li></ul>
+
+</div>
+
 <div class="section" id="dependency">
 <h2>他のモジュールへの依存性</h2>
 
