@@ -90,8 +90,8 @@ type="application/atom+xml">An Atom feed for ChangeLog diffs</a> is
 available.</span>
 
 <span lang=ja><a href="manakai-commit" rel=feed
-type="application/atom+xml">An Atom feed for ChangeLog diffs</a> is
-available.</span>
+type="application/atom+xml">変更履歴差分の Atom
+フィード</a>はじめました。</span>
 
 <ul>
 
@@ -141,17 +141,6 @@ package.)</li>
 </ul>
 </div>
 
-<div class="section" id="demo">
-<h2>デモ</h2>
-
-<ul>
-<li><a href="http://suika.fam.cx/gate/2007/uri/uri-demo-interface" lang="en">manakai's
-URI module demo</a></li>
-<li><a href="http://suika.fam.cx/gate/2007/html/parser-manakai-interface" lang="en">HTML5
-parser (<em>beta</em>) Web interface (manakai version)</a></li>
-</ul>
-</div>
-
 <div class="section" id="documentation">
 <h2>文書</h2>
 
@@ -176,6 +165,40 @@ parser (<em>beta</em>) Web interface (manakai version)</a></li>
   </ul>
 </li>
 </ul>
+</div>
+
+<div class="section" id="demo">
+<h2>デモ</h2>
+
+<ul>
+<li><a href="http://suika.fam.cx/gate/2007/uri/uri-demo-interface" lang="en">manakai's
+URI module demo</a></li>
+<li><a href="http://suika.fam.cx/gate/2007/html/parser-manakai-interface" lang="en">HTML5
+parser (<em>beta</em>) Web interface (manakai version)</a></li>
+</ul>
+</div>
+
+<div class=section id=applications>
+<h2 data-lang-container>
+<span lang=en>Applications using manakai-core</span>
+<span lang=ja>manakai-core を用いた応用</span>
+</h2>
+
+<ul>
+
+<li><a href="http://suika.fam.cx/www/harusame/readme"
+lang=ja>Harusame</a>, multilingual Web page management tool.
+
+<li>suikawari
+
+<li id=app-webhacc><a
+href="http://suika.fam.cx/gate/2007/html/cc/"><abbr>WebHACC</abbr>
+(Web hypertext application conformance checker)</a> (See also <a
+href="http://suika.fam.cx/gate/2007/html/cc-about"><cite>about
+WebHACC</cite></a>).
+
+</ul>
+
 </div>
 
 <div class="section" id="dependency">
