@@ -41,8 +41,8 @@ XML 文書、CSS スタイル・シートを操作することができます。
 <div class="section" id="news">
 <h2 data-lang-container=""><span lang="ja">最新情報</span></h2>
 
-<p data-lang-container=""><span lang="ja"><a href="manakai-commit" rel="feed" type="application/atom+xml">An Atom feed for ChangeLog diffs</a> is
-available.</span></p><ul>
+<p data-lang-container=""><span lang="ja"><a href="manakai-commit" rel="feed" type="application/atom+xml">変更履歴差分の Atom
+フィード</a>はじめました。</span></p><ul>
 
 <li><a data-lang-container="" href="news-0-4" hreflang="en"><span lang="ja">manakai 0.4 の変更点 (英語)</span></a></li>
 
@@ -119,6 +119,23 @@ parser (<em>beta</em>) Web interface (manakai version)</a></li>
   </ul>
 </li>
 </ul>
+</div>
+
+<div class="section" id="applications">
+<h2 data-lang-container=""><span lang="ja">manakai-core を用いた応用</span></h2>
+
+<ul>
+
+<li><a href="http://suika.fam.cx/www/harusame/readme" lang="ja">Harusame</a>, multilingual Web page management tool.
+
+</li><li>suikawari
+
+</li><li id="app-webhacc"><a href="http://suika.fam.cx/gate/2007/html/cc/"><abbr>WebHACC</abbr>
+(Web hypertext application conformance checker)</a> (See also <a href="http://suika.fam.cx/gate/2007/html/cc-about"><cite>about
+WebHACC</cite></a>).
+
+</li></ul>
+
 </div>
 
 <div class="section" id="dependency">
