@@ -1,5 +1,9 @@
 2008-10-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* cover.html.src: A section on applications is added.
+
+2008-10-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* features.html.src: Renamed from features.ja.html.
 
 	* Makefile (all): |features.ja.html| and |features.en.html| added.
